2006-04-19  Sergey Poznyakoff  <gray@gnu.org.ua>

	* NEWS: Update
	* README: Document --with-berkeley-db option
	* configure.ac (--with-berkeley-db): New option
	(--with-db2): Deprecated. Remove from the help list.
	Raise version number to 0.6.94
	
	* lib/mu_dbm.c: Add support for Berkeley DB >= 3
	* lib/mu_dbm.h: Likewise
	* pop3d/popauth.c: Likewise
	* mailbox/nls.c: Include stdlib.h

	* doc/texinfo/address.texi, doc/texinfo/attribute.texi,
	doc/texinfo/auth.texi, doc/texinfo/body.texi,
	doc/texinfo/envelope.texi, doc/texinfo/folder.texi,
	doc/texinfo/framework.texi, doc/texinfo/headers.texi,
	doc/texinfo/imap4.texi, doc/texinfo/iterator.texi,
	doc/texinfo/libsieve.texi, doc/texinfo/locker.texi,
	doc/texinfo/mailbox.texi, doc/texinfo/mailcap.texi,
	doc/texinfo/mailer.texi, doc/texinfo/mbox.texi,
	doc/texinfo/message.texi, doc/texinfo/mime.texi,
	doc/texinfo/nntp.texi, doc/texinfo/parse822.texi,
	doc/texinfo/pop3.texi, doc/texinfo/smtp.texi,
	doc/texinfo/stream.texi, doc/texinfo/url.texi: Reflect namespace
	changes.

2006-04-05  Sergey Poznyakoff  <gray@gnu.org.ua>

	* THANKS: Add Willem Jaap Zwart
	* NEWS: Update
	* imap4d/imap4d.h (is_atom): New function
	* imap4d/list.c (print_file,print_dir): Rewrite using an
	auxiliary function. Make sure the string is properly quoted if it
	is not a valid atom.
	* imap4d/util.c (is_atom): New function.
	* libproto/imap/folder.c (list_copy): Do nothing if src is NULL.
	(imap_list): Use mu_argcv_get instead of strtok_r to parse last
	two tokens of the reply, so that file names containing white space
	are processed.
	* mailbox/argcv.c: Fix indentation.

2006-03-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	* imap4d/append.c, imap4d/fetch.c, libproto/imap/mbox.c,
	libproto/mbox/mbox.c, libsieve/actions.c, mailbox/message.c,
	mailbox/message_stream.c, mh/mh_init.c, mh/send.c: Use mu_strftime
	* include/mailutils/envelope.h (MU_ENVELOPE_DATE_FORMAT)
	(MU_ENVELOPE_DATE_LENGTH): New defines